...
    <string name="action_back">Back</string>
    <string name="action_close">Close</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_copy">Copy</string>
    <string name="action_copy_code">Copy</string>
    <string name="action_retry">Try again</string>
    <string name="action_details">Details</string>
    <string name="action_hide_details">Hide details</string>
    <string name="action_dismiss">Dismiss</string>
    <string name="code_language_plain">text</string>
    <string name="state_on">On</string>
    <string name="state_off">Off</string>
    <string name="time_just_now">just now</string>
...
